--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,25 +46,25 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.2
 
-  dio: ^4.0.6
-  dio_cookie_manager: ^2.0.0
-  cookie_jar: ^3.0.1
-  shared_preferences: ^2.0.15
+  dio: ^5.3.2
+  dio_cookie_manager: ^3.1.0+1
+  cookie_jar: ^4.0.8
+  shared_preferences: ^2.2.0
   flutter_easyloading: ^3.0.5
   # 获取各系统路径
-  path_provider: ^2.0.11
+  path_provider: ^2.1.0
   # https://juejin.cn/post/6924104248275763208#heading-33
   get: ^4.6.5
-  permission_handler: ^10.2.0
+  permission_handler: ^10.4.3
 
   # 提供国际化和本地化功能，包括消息翻译、复数和性别、日期/数字格式和解析以及双向文本。(机器翻译文本 暂时只是拿来做dateFormat)
-  intl: ^0.17.0
+  intl: ^0.18.0
 
   # 图片下载
-  image_gallery_saver: ^1.7.1
-
+  image_gallery_saver: ^2.0.3
+  bruno: ^3.4.2
   # 获取系统代理
   system_proxy: ^0.1.0
 
